made the page refresh automatically to show new comments. implemented the display name with db connections. fixed css so light/dark mode affects the table too

--- a/my-app/src/pages/Home.css
+++ b/my-app/src/pages/Home.css
@@ -23,7 +23,7 @@
 }
 
 .bkg-dark {
-background-color: #3f3f3f !important;
+background-color: #7e7e7e !important;
 color: white !important;
 }
 
@@ -51,3 +51,5 @@ background-color: black !important;
   display: inline-block !important;
   font-size: 10px !important;
 }
+
+
